--- a/notes/9-API-building/9.1-init.md
+++ b/notes/9-API-building/9.1-init.md
@@ -21,6 +21,28 @@
 
 6. echo "hola" index.ts
 7. tsconfig.json
+
+```js
+{
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "declaration": true,
+    "resolveJsonModule": true
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
+}
+
+```
+
 8. scripts básicos en p.json
 ```js
   "scripts": {
@@ -32,4 +54,10 @@
 
 9. compilamos archivos ts en carpeta ./dist
 10. archivo .gitignore
+
+```js
+/node_modules
+/dist
+.env
+```
 11. archivo .env y .env.template
