--- a/notes/9-API-building/9.5-connectDB.md
+++ b/notes/9-API-building/9.5-connectDB.md
@@ -17,9 +17,9 @@
 ```js
 const mongoose = require("mongoose")
 
-const connectDB = async() =>{
+const connectDB = async():Promise<void> =>{
 try{
-  await mongoose.connect(env.process.DB_URL)
+  await mongoose.connect(env.process.DB_URL as string)
   console.log("✅ Conexión con la BBDD realizada con éxito.")
 }catch(error){
   console.log("❌ Error al conectar la BBDD:", error)
@@ -33,3 +33,36 @@ module.exports={connectDB}
     > require("dotenv").conf()
 
 12. arrancar de nuevo el servidor
+
+
+# TYPESCRIPT
+
+### `Promise<void>`
+
+Significa que la función es **asíncrona** (`async`) y **no devuelve ningún valor útil**, solo indica que termina.
+
+```ts
+async function ejemplo(): Promise<void> {
+  // hace algo
+}
+```
+
+* Es igual a `void`, pero **envuelto en una promesa** porque es una función `async`.
+* Se usa para funciones que solo hacen algo (como conectar a la base de datos), pero no devuelven datos.
+
+---
+
+### `as string`
+
+Es una **aserción de tipo**: le estás diciendo a TypeScript *"confía en mí, esto es un `string`"*.
+
+Ejemplo:
+
+```ts
+const url = process.env.DB_URL as string
+```
+
+`process.env.DB_URL` es de tipo `string | undefined` porque puede no existir, y TypeScript exige que manejes ese caso. Al usar `as string`, le estás diciendo *"sé que no es undefined"*.
+
+**Importante:** solo deberías usarlo si estás seguro de que la variable de entorno existe. Si no, podría haber errores en tiempo de ejecución.
+
