UPDATE 09-API-testing-app connectDB && turn on ESM

--- a/notes/9-API-building/9.5-connectDB.md
+++ b/notes/9-API-building/9.5-connectDB.md
@@ -17,20 +17,35 @@
 ```js
 const mongoose = require("mongoose")
 
-const connectDB = async():Promise<void> =>{
-try{
-  await mongoose.connect(env.process.DB_URL as string)
-  console.log("✅ Conexión con la BBDD realizada con éxito.")
-}catch(error){
-  console.log("❌ Error al conectar la BBDD:", error)
+const connectDB =async():Promise<void>=>{
+    try {
+        const dbUrl = process.env.URL_DB;
+        if (!dbUrl) {
+        throw new Error("❌ La variable de entorno URL_DB no está definida.");
+        }
+
+        await mongoose.connect(dbUrl as string);
+        console.log("✅ Éxito al conectar con la BBDD")
+        
+    } catch (error) {
+        console.log("❌ Error al conectar la BBDD")
+    }
 }
 
-module.exports={connectDB}
+
+module.exports = {connectDB}
 ```
 
 10. importamos la función en index.js
+```js 
+const {connectDB} = require("./config/connectDB")
+
+connectDB()
+```
 11. verificamos que está importado la librería dotenv arriba del todo de nuestro arhivo:
-    > require("dotenv").conf()
+```js
+require("dotenv").conf()
+```
 
 12. arrancar de nuevo el servidor
 
